04/18/25 8:00: automatic pickup working