@@ -23,7 +23,8 @@ public:
   int pickup(dungeon *d);
   int drop(dungeon *d, object *o);
   void wear(int);
-  void expunge(object *o);
+  int expunge(object *o);
+  int drop(object *o);
   void take_off(object *o);
   int inven_space();
 };
