@@ -1,1 +1,2 @@
 04/18/25 8:00: automatic pickup working
+04/18/25 9:00: inspect  working
